force-app/main/default/objects/Endesa_API__mdt/Endesa_API__mdt.object-meta.xml
<CustomObject>
    <description>Contient les infos permettant la connexion à l&apos;API Endesa</description>
    <label>Endesa API</label>
    <pluralLabel>Endesa APIs</pluralLabel>
</CustomObject>