force-app/main/default/objects/Endesa_API__mdt/fields/Access_token__c.field-meta.xml
<CustomField>
    <fullName>Access_token__c</fullName>
    <label>Access token</label>
    <length>200</length>
    <type>Text</type>
</CustomField>