force-app/main/default/objects/Endesa_API__mdt/fields/Call_back__c.field-meta.xml
<CustomField>
    <fullName>Call_back__c</fullName>
    <label>Call back</label>
    <length>200</length>
    <type>Text</type>
</CustomField>