force-app/main/default/objects/Endesa_API__mdt/fields/Client_id__c.field-meta.xml
<CustomField>
    <fullName>Client_id__c</fullName>
    <label>Client id</label>
    <length>200</length>
    <type>Text</type>
</CustomField>