force-app/main/default/objects/Endesa_API__mdt/fields/Client_secret__c.field-meta.xml
<CustomField>
    <fullName>Client_secret__c</fullName>
    <label>Client secret</label>
    <length>200</length>
    <type>Text</type>
</CustomField>