force-app/main/default/objects/Endesa_API__mdt/fields/Quote_url__c.field-meta.xml
<CustomField>
    <fullName>Quote_url__c</fullName>
    <label>Quote url</label>
    <length>200</length>
    <type>Text</type>
</CustomField>