force-app/main/default/objects/Endesa_API__mdt/fields/Refresh_token__c.field-meta.xml
<CustomField>
    <fullName>Refresh_token__c</fullName>
    <label>Refresh token</label>
    <length>200</length>
    <type>Text</type>
</CustomField>