force-app/main/default/objects/Endesa_API__mdt/fields/Sandboxe__c.field-meta.xml
<CustomField>
    <fullName>Sandboxe__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sandboxe ?</label>
    <type>Checkbox</type>
</CustomField>